--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; template</title>
+    <title>GEDUNG INDONESIA MENGGUGAT</title>
     <meta charset="utf-8">
-    <meta name="description" content="&lt;model-viewer&gt; template">
+    <meta name="description" content="Gedung Indonesia Menggugat terletak di Jalan Printis Kemerdekaan No. 5 Kota Bandung. Gedung ini menjadi saksi peristiwa bersejarah ketika para pejuang memperjuangkan kemerdekaan Indonesia. ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="Testing2_GIM.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.png" shadow-intensity="1" environment-image="pillars_1k.hdr" shadow-softness="0" camera-target="0m 0m 0m" auto-rotate camera-orbit="-1300deg 84.11deg 44.5m" field-of-view="30deg">
+    <model-viewer src="Testing2_GIM.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="postergim.png" shadow-intensity="1" environment-image="pillars_1k.hdr" shadow-softness="0" camera-target="0m 0m 0m" auto-rotate camera-orbit="-1300deg 84.11deg 44.5m" field-of-view="30deg">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
